--- a/_data/youtube.yml
+++ b/_data/youtube.yml
@@ -1,16 +1,18 @@
 playlists:
   - key: "mdp_treino"
     title: "MD Personal — Últimos vídeos (Playlist 1)"
-    id: "PLyHDAg9JOEnxubgaUYGLFrZJkPDi6lBX-"   # ID da sua 1ª playlist
+    id: "PLyHDAg9JOEnxubgaUYGLFrZJkPDi6lBX-"
     url: "https://youtube.com/playlist?list=PLyHDAg9JOEnxubgaUYGLFrZJkPDi6lBX-"
-    last_id: ""   # deixamos vazio; o workflow pode preencher
-    title_last: ""  # opcional: preenchido pelo workflow
-    published: ""   # opcional: preenchido pelo workflow
+    thumb: "/assets/img/yt/mdp_treino.jpg"   # coloque uma imagem local (capa que vc quiser)
+    last_id: ""        # opcional (se um dia quiser usar capa do último vídeo)
+    title_last: ""     # opcional
+    published: ""      # opcional (ex: "2025-11-05")
 
   - key: "mdp_cnt"
     title: "MD Personal — Últimos vídeos (Playlist 2)"
-    id: "PLyHDAg9JOEnwA_QHpPrUbBBtagjQPT8tZ"   # ID da sua 2ª playlist
+    id: "PLyHDAg9JOEnwA_QHpPrUbBBtagjQPT8tZ"
     url: "https://youtube.com/playlist?list=PLyHDAg9JOEnwA_QHpPrUbBBtagjQPT8tZ"
+    thumb: "/assets/img/yt/mdp_cnt.jpg"      # imagem local para a 2ª playlist
     last_id: ""
     title_last: ""
     published: ""
