--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -18,7 +18,7 @@ items:
 
 
 
-- id: "omega3-dux-180"
+- id: "shark-pro-beef-protein"
     active: true
     weight: 3
 title: "Shark Pro Whey Beef Protein — 900g (Frutas Roxas)"
