--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -1,7 +1,6 @@
 enabled: true
 remember_close_hours: 0
-hide_on_paths:
-  - "/avaliacao"
+hide_on_paths: ["/avaliacao"]
 rotation: "weighted-random"
 once_per_session: false
 
@@ -11,7 +10,7 @@ items:
     weight: 3
     title: "Creatina Adaptogen — Refil 1kg"
     text: "Força e rendimento. Cupom: MDSUPLEMENTOS5"
-    image: "{{ '/assets/img/afiliados/creatina-adaptogen-1kg.jpg' | relative_url }}"
+    image: "/assets/img/afiliados/creatina-adaptogen-1kg.jpg"
     url: "https://www.fithouse.com.br/creatina/creatina-platinum-series-refil-1kg-adaptogen?am=mdsuplementos&parceiro=10447&cupom=mdsuplementos5"
     cta: "Ver oferta"
 
@@ -20,7 +19,7 @@ items:
     weight: 2
     title: "Kettlebell (4–12 kg)"
     text: "Força funcional e versatilidade no treino em casa."
-    image: "{{ '/assets/img/afiliados/kettlebell.jpg' | relative_url }}"
+    image: "/assets/img/afiliados/kettlebell.jpg"
     url: "https://s.shopee.com.br/1VqV85rdT0"
     cta: "Conferir"
 
@@ -29,6 +28,6 @@ items:
     weight: 3
     title: "Routine Dermo — Hidratante FPS 50"
     text: "Proteção diária pra treinar ao ar livre."
-    image: "{{ '/assets/img/afiliados/routine-dermo-fps50.jpg' | relative_url }}"
+    image: "/assets/img/afiliados/routine-dermo-fps50.jpg"
     url: "https://s.shopee.com.br/1g9vRrOMa1"
     cta: "Ver"
