--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -5,29 +5,20 @@ rotation: "weighted-random"
 once_per_session: false
 
 items:
-  - id: "creatina-adaptogen-1kg"
+  - id: "bike-spinning-profissional"
     active: true
     weight: 3
-    title: "Creatina Adaptogen — Refil 1kg"
-    text: "Força e rendimento. Cupom: MDSUPLEMENTOS5"
-    image: "/assets/img/afiliados/creatina-adaptogen-1kg.jpg"
-    url: "https://www.fithouse.com.br/creatina/creatina-platinum-series-refil-1kg-adaptogen?am=mdsuplementos&parceiro=10447&cupom=mdsuplementos5"
-    cta: "Ver oferta"
-
-  - id: "kettlebell-4-12kg"
-    active: true
-    weight: 2
-    title: "Kettlebell (4–12 kg)"
-    text: "Força funcional e versatilidade no treino em casa."
-    image: "/assets/img/afiliados/kettlebell.jpg"
-    url: "https://s.shopee.com.br/1VqV85rdT0"
+    title: "Bicicleta Ergométrica de Spinning Profissional"
+    text: "Treino cardiovascular intenso com ajuste de carga e conforto ergonômico."
+    image: "/assets/img/afiliados/bike-spinning.jpg"
+    url: "https://s.shopee.com.br/70CDNBj73V"
     cta: "Conferir"
 
-  - id: "routine-dermo-fps50"
+  - id: "bolsa-magnetica-squeeze"
     active: true
-    weight: 3
-    title: "Routine Dermo — Hidratante FPS 50"
-    text: "Proteção diária pra treinar ao ar livre."
-    image: "/assets/img/afiliados/routine-dermo-fps50.jpg"
-    url: "https://s.shopee.com.br/1g9vRrOMa1"
-    cta: "Ver"
+    weight: 2
+    title: "Bolsa Magnética para Squeeze Fitness"
+    text: "Transporte prático com fixação magnética para academia e outdoor."
+    image: "/assets/img/afiliados/bolsa-magnetica-squeeze.jpg"
+    url: "https://s.shopee.com.br/5fgpmnzhek"
+    cta: "Ver oferta"
